--- a/drivers/vanilla/can-cpc/Makefile
+++ b/drivers/vanilla/can-cpc/Makefile
@@ -1,13 +1,15 @@
 CFLAGS += -I../can -I../cpc-usb
 LDFLAGS += -L../can -L../cpc-usb
 
+PREFIX = /usr/local
+
 libcan-cpc.so: can_cpc.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -Wall -shared -o libcan-cpc.so \
 	can_cpc.c -lcpc
 	ln -sf $(PWD)/libcan-cpc.so ../can/libcan.so
 
 install: libcan-cpc.so
-	install -c -o root -g root -m 644 libcan-cpc.so /usr/lib
+	install -c -m 644 libcan-cpc.so $(PREFIX)/lib/libcan.so
 
 clean:
 	rm -f *.o
