--- a/drivers/vanilla/can-cpc/Makefile
+++ b/drivers/vanilla/can-cpc/Makefile
@@ -4,12 +4,12 @@ LDFLAGS += -L../can -L../cpc-usb
 PREFIX = /usr/local
 
 libcan-cpc.so: can_cpc.c
-	$(CC) $(CFLAGS) $(LDFLAGS) -Wall -shared -o libcan-cpc.so \
+	$(CC) $(CFLAGS) $(LDFLAGS) -shared -o libcan-cpc.so \
 	can_cpc.c -lcpc
 	ln -sf $(PWD)/libcan-cpc.so ../can/libcan.so
 
 install: libcan-cpc.so
-	install -c -m 644 libcan-cpc.so $(PREFIX)/lib/libcan.so
+	install -c -m 755 libcan-cpc.so $(PREFIX)/lib/libcan.so
 
 clean:
 	rm -f *.o
