libcan ReMake port and packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,6 @@ remake_doc(
   html
 )
 
-remake_pack_deb()
-remake_pack_deb(COMPONENT dev)
+remake_pack_deb(tulibs)
+remake_pack_deb(COMPONENT dev tulibs-dev)
 remake_pack_deb(COMPONENT doc)
