--- a/src/can/CMakeLists.txt
+++ b/src/can/CMakeLists.txt
@@ -1,6 +1,10 @@
-remake_include(../config)
+remake_find_library(
+  tulibs-config config.h
+  PACKAGE tulibs
+)
+
 remake_add_library(
   can PREFIX OFF
-  LINK config
+  LINK ${TULIBS_LIBRARY}
 )
 remake_add_headers()
