Doc package is architecture independent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,4 @@ remake_doc(
 
 remake_pack_deb(tulibs)
 remake_pack_deb(COMPONENT dev tulibs-dev)
-remake_pack_deb(COMPONENT doc)
+remake_pack_deb(ARCH all COMPONENT doc)
