--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,16 @@ remake_doc(
   html
 )
 
-remake_pack_deb(tulibs)
-remake_pack_deb(COMPONENT dev libcan tulibs-dev)
-remake_pack_deb(ARCH all COMPONENT doc)
+remake_pack_deb(
+  tulibs
+)
+remake_pack_deb(
+  COMPONENT dev
+  DESCRIPTION "development headers"
+  libcan tulibs-dev
+)
+remake_pack_deb(
+  ARCH all
+  COMPONENT doc
+  DESCRIPTION "documentation"
+)
