--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,13 +37,13 @@ remake_distribute_deb(
   DISTRIBUTION lucid
   SECTION libs
   UPLOAD ppa:kralf/asl
-  DEPENDS tulibs-dev libcpc-dev remake
+  DEPENDS tulibs-dev libcpc-dev remake doxygen
   PASS CMAKE_BUILD_TYPE LIBCAN_GIT_REVISION
 )
 remake_distribute_deb(
   DISTRIBUTION precise
   SECTION libs
   UPLOAD ppa:kralf/asl
-  DEPENDS tulibs-dev libcpc-dev remake
+  DEPENDS tulibs-dev libcpc-dev remake doxygen
   PASS CMAKE_BUILD_TYPE LIBCAN_GIT_REVISION
 )
