--- a/src/serial/CMakeLists.txt
+++ b/src/serial/CMakeLists.txt
@@ -3,12 +3,8 @@ remake_find_library(
   PACKAGE tulibs
 )
 
-remake_include(
-  ../config
-  ../can
-)
 remake_add_library(
   serial
-  LINK can ${TULIBS_SERIAL_LIBRARY}
+  LINK interface ${TULIBS_SERIAL_LIBRARY}
 )
 remake_add_headers()
