--- a/src/serial/CMakeLists.txt
+++ b/src/serial/CMakeLists.txt
@@ -1,10 +1,8 @@
-remake_find_library(
-  tulibs-serial serial.h
-  PACKAGE tulibs
-)
+remake_find_package(tulibs CONFIG)
 
 remake_add_library(
-  serial
-  FORCE_LINK interface ${TULIBS_SERIAL_LIBRARY} "-Wl,-soname=libcan.so"
+  can-serial PREFIX OFF
+  *.c ../can/*.c
+  LINK ${TULIBS_LIBRARIES} "-Wl,-soname=libcan.so"
 )
 remake_add_headers()
