--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 remake_find_package(tulibs CONFIG)
 
+remake_add_directories(can)
 remake_pkg_config_generate(EXTRA_LIBS -lcan REQUIRES tulibs)
 
 remake_include(*)
-remake_add_directories()
+remake_add_directories(EXCLUDE can)
