--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 remake_find_package(tulibs CONFIG)
 
+remake_include(${TULIBS_INCLUDE_DIRS})
 remake_add_directories(can)
 remake_pkg_config_generate(EXTRA_LIBS -lcan REQUIRES tulibs)
 
