* Adapted can_init_config() to changes in Tulibs configuration interface * Added Doxygen main page and license page

--- a/src/cpc/CMakeLists.txt
+++ b/src/cpc/CMakeLists.txt
@@ -7,4 +7,4 @@ remake_add_library(
   LINK ${TULIBS_LIBRARIES} ${LIBCPC_LIBRARIES} ${M_LIBRARY}
     "-Wl,-soname=libcan.so"
 )
-remake_add_headers(INSTALL cpc)
+remake_add_headers()
