--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,10 @@ remake_distribute_deb(
   DEPENDS tulibs-dev libcpc-dev remake pkg-config doxygen
   PASS CMAKE_BUILD_TYPE LIBCAN_GIT_REVISION
 )
+remake_distribute_deb(
+  DISTRIBUTION trusty
+  SECTION libs
+  UPLOAD ppa:kralf/asl
+  DEPENDS tulibs-dev libcpc-dev remake pkg-config doxygen
+  PASS CMAKE_BUILD_TYPE LIBCAN_GIT_REVISION
+)
